# gomoku-gpt

./: .gitignore  AI_CHESS_ANALYSIS.md  AI_FORMAT_OPTIMIZATION.md  AI_IMPROVEMENT_REPORT.md  FINAL_OPTIMIZATION_SUCCESS.md  FINAL_SUCCESS_REPORT.md  FIX_REPORT.md  LLM_ROUTER_GUIDE.md  OLD_README.md  OPTIMIZATION_RECOMMENDATIONS.md  README.md  TOKEN_OPTIMIZATION_REPORT.md  chess_analyzer.py  compact_format_design.md  config_template.py  demo.py  final_test.py  game_core.py  llm_router.py  logger.py  main.py  pyproject.toml  simple_test.py  test_ai_performance.py  test_basic.py  test_game_tokens.py  test_improved_ai.py  test_improved_prompts.py  test_improvements.py  test_llm_router.py  test_new_format.py  test_token_optimization.py
