[project]
name = "gomoku-gpt"
version = "0.1.0"
description = "基于 GPT 技术的智能五子棋游戏系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 核心依赖将在后续开发中添加
    # "numpy>=1.24.0",      # 数值计算和棋盘表示
    # "openai>=1.0.0",      # GPT API 集成
    # "pydantic>=2.0.0",    # 数据验证和设置管理
]

[project.optional-dependencies]
dev = [
    # 开发工具依赖 (建议在后续开发中添加)
    # "pytest>=7.0.0",        # 测试框架
    # "pytest-cov>=4.0.0",    # 测试覆盖率
    # "ruff>=0.1.0",          # 代码格式化和 linting
    # "mypy>=1.0.0",          # 静态类型检查
    # "pre-commit>=3.0.0",    # Git hooks
]

[project.urls]
Homepage = "https://github.com/Mikko-ww/gomoku-gpt"
Repository = "https://github.com/Mikko-ww/gomoku-gpt"
Issues = "https://github.com/Mikko-ww/gomoku-gpt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gomoku_gpt"]
